--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Super Cool JavaScript Slot Game</title>
+
+<script src="index.js"></script>
+<link rel="stylesheet" href="index.css">
+
 </head>
 <body>
+    <div class="title">
+        <h1>My Super Cool Slot Game</h1>
+        <div class="container">
+            <div class="slot wrapper">
+                <div id="slot1" class="slot"></div>
+                <div id="slot2" class="slot"></div>
+                <div id="slot3" class="slot"></div>
+                <div class="clear"></div>
+            </div>
+            <div id="result"></div>
+            <div><button id="control">Start</button></div>
+        </div>
+    </div>
     
 </body>
 </html>
