--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 
 <script src="index.js"></script>
 <link rel="stylesheet" href="index.css">
+<script src="jquery.spritely.js"></script>
+<script src="jquery.backgroundPosition.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
 <body>
     <div class="title">
         <h1>My Super Cool Slot Game</h1>
         <div class="container">
-            <div class="slot wrapper">
+            <div class="slot-wrapper">
                 <div id="slot1" class="slot"></div>
                 <div id="slot2" class="slot"></div>
                 <div id="slot3" class="slot"></div>
